--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+# Assessment and sensitive files
+docs/Rubric - Hytel AI Coding Bootcamp.docx
+**/Rubric*.docx
