--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,14 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
+    "build:staging": {
+      "dependsOn": ["^build:staging"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+    },
+    "build:production": {
+      "dependsOn": ["^build:production"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
@@ -26,4 +34,4 @@
       "cache": false
     }
   }
-} 
+}
