--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@fitspark/shared": "workspace:*",
     "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.61.5",
     "class-variance-authority": "^0.7.1",
