feat: implement Workout Execution & Logging Epic
- Add WorkoutSessionPage for live workout execution
- Add WorkoutSummaryPage for post-workout analytics
- Update DashboardPage with functional Start Workout button
- Add routing for workout pages
- Update Firestore rules for workout logging
- Implement set logging, rest timers, and workout completion
- Add performance tracking and volume calculations

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "fitspark-staging"
+    "default": "fitspark-staging",
+    "production": "fitspark-production"
   }
 }
