--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -35,12 +35,12 @@ jobs:
           cd api
           node sync-google-fit.js
         env:
-          VITE_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          VITE_FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_API_KEY: "AIzaSyAI_StR3wQSNcEZb78eFrVdz5HoGaXgcHg"
+          FIREBASE_AUTH_DOMAIN: "fitspark-2.firebaseapp.com"
+          FIREBASE_PROJECT_ID: "fitspark-2"
+          FIREBASE_STORAGE_BUCKET: "fitspark-2.firebasestorage.app"
+          FIREBASE_MESSAGING_SENDER_ID: "996004291289"
+          FIREBASE_APP_ID: "1:996004291289:web:dad5a0de6b0c1eff1e54c8"
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           API_SECRET_KEY: ${{ secrets.API_SECRET_KEY }}
@@ -71,10 +71,10 @@ jobs:
           cd api
           node update-leaderboards.js
         env:
-          VITE_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-          VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          VITE_FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_API_KEY: "AIzaSyAI_StR3wQSNcEZb78eFrVdz5HoGaXgcHg"
+          FIREBASE_AUTH_DOMAIN: "fitspark-2.firebaseapp.com"
+          FIREBASE_PROJECT_ID: "fitspark-2"
+          FIREBASE_STORAGE_BUCKET: "fitspark-2.firebasestorage.app"
+          FIREBASE_MESSAGING_SENDER_ID: "996004291289"
+          FIREBASE_APP_ID: "1:996004291289:web:dad5a0de6b0c1eff1e54c8"
           API_SECRET_KEY: ${{ secrets.API_SECRET_KEY }}
