--- a/functions/package.json
+++ b/functions/package.json
@@ -22,9 +22,9 @@
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
     "@types/node": "^18.0.0",
-    "@types/node-cron": "^3.0.11"
+    "@types/node-cron": "^3.0.11",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
