--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,55 @@
 {
-  "functions": {
-    "api/sync-google-fit.js": {
-      "maxDuration": 60
+  "version": 2,
+  "builds": [
+    {
+      "src": "apps/web/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     },
-    "api/update-leaderboards.js": {
-      "maxDuration": 60
+    {
+      "src": "api/sync-google-fit.js",
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 60
+      }
+    },
+    {
+      "src": "api/update-leaderboards.js",
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 60
+      }
     }
-  },
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/apps/web/dist/$1"
+    }
+  ],
   "crons": [
     {
       "path": "/api/sync-google-fit",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 12 * * *"
     },
     {
       "path": "/api/update-leaderboards",
       "schedule": "0 0 * * *"
     }
-  ]
+  ],
+  "env": {
+    "FIREBASE_API_KEY": "AIzaSyAI_StR3wQSNcEZb78eFrVdz5HoGaXgcHg",
+    "FIREBASE_AUTH_DOMAIN": "fitspark-2.firebaseapp.com",
+    "FIREBASE_PROJECT_ID": "fitspark-2",
+    "FIREBASE_STORAGE_BUCKET": "fitspark-2.firebasestorage.app",
+    "FIREBASE_MESSAGING_SENDER_ID": "996004291289",
+    "FIREBASE_APP_ID": "1:996004291289:web:dad5a0de6b0c1eff1e54c8",
+    "FIREBASE_MEASUREMENT_ID": "G-W2J6MW7NWL"
+  }
 }
