--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -4,6 +4,12 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "env": {
     "VITE_FIREBASE_API_KEY": "AIzaSyAI_StR3wQSNcEZb78eFrVdz5HoGaXgcHg",
     "VITE_FIREBASE_AUTH_DOMAIN": "fitspark-2.firebaseapp.com",
