--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/apps/web/dist/$1"
+      "dest": "/apps/web/dist/index.html"
     }
   ],
   "crons": [
