Fix SPA routing and favicon issues for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,14 @@
       "dest": "/api/$1"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/apps/web/dist/assets/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "dest": "/apps/web/dist/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/apps/web/dist/index.html"
     }
