--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,16 @@
       "src": "packages/shared/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "installCommand": "pnpm install"
       }
     },
     {
       "src": "apps/web/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "installCommand": "pnpm install"
       }
     },
     {
