Fix pnpm install errors and update Vercel configuration
- Configure pnpm retry settings for better network reliability
- Update vercel.json to use pnpm instead of npm
- Add .vercelignore for cleaner deployments
- Test production build successfully

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build needed - using pre-built files'",
+  "buildCommand": "pnpm run build:production",
   "outputDirectory": "apps/web/dist",
-  "installCommand": "echo 'No install needed - using pre-built files'",
+  "installCommand": "pnpm install --frozen-lockfile",
   "builds": [
     {
       "src": "api/sync-google-fit.js",
