--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "pnpm run build:production --filter=@fitspark/web",
-  "outputDirectory": "apps/web/dist",
+  "buildCommand": "pnpm run build:production --filter=@fitspark/web && xcopy apps\\web\\dist dist /E /I",
+  "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "routes": [
     {
