--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "pnpm run build:production --filter=@fitspark/web && xcopy apps\\web\\dist dist /E /I",
+  "buildCommand": "pnpm run build:production --filter=@fitspark/web && cp -r apps/web/dist ./dist",
   "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "routes": [
