--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "packageManager": "pnpm@9.15.9",
   "engines": {
-    "node": ">=18",
-    "pnpm": ">=8"
+    "node": "20.x",
+    "pnpm": ">=8.0.0"
   },
   "pnpm": {
     "overrides": {
