--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,16 +22,19 @@
   },
   "dependencies": {
     "@fitspark/shared": "workspace:*",
-    "@hookform/resolvers": "^3.10.0",
+    "@fontsource/manrope": "^5.2.8",
+    "@fontsource/pacifico": "^5.2.7",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.61.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +46,7 @@
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.76"
   },
