--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -3,9 +3,9 @@ name: Sync Google Fit Data and Update Leaderboards
 on:
   schedule:
     # Run every 6 hours
-    - cron: '0 */6 * * *'
+    - cron: "0 */6 * * *"
     # Run daily at midnight UTC for leaderboards
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,23 +13,23 @@ jobs:
     if: github.event.schedule == '0 */6 * * *' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     name: Sync Google Fit Data
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'api/package-lock.json'
-          
+          node-version: "18"
+          cache: "npm"
+          cache-dependency-path: api/package-lock.json
+
       - name: Install dependencies
         run: |
           cd api
           npm install
-          
+
       - name: Sync Google Fit Data
         run: |
           cd api
@@ -49,23 +49,23 @@ jobs:
     if: github.event.schedule == '0 0 * * *' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     name: Update Monthly Leaderboards
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'api/package-lock.json'
-          
+          node-version: "18"
+          cache: "npm"
+          cache-dependency-path: api/package-lock.json
+
       - name: Install dependencies
         run: |
           cd api
           npm install
-          
+
       - name: Update Leaderboards
         run: |
           cd api
