--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "pnpm --filter @fitspark/web run build:production && cp -r apps/web/dist dist",
+  "buildCommand": "turbo run build:production --filter=@fitspark/web && cp -r apps/web/dist dist",
   "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "routes": [
@@ -38,6 +38,13 @@
     "FIREBASE_STORAGE_BUCKET": "fitspark-2.firebasestorage.app",
     "FIREBASE_MESSAGING_SENDER_ID": "996004291289",
     "FIREBASE_APP_ID": "1:996004291289:web:dad5a0de6b0c1eff1e54c8",
-    "FIREBASE_MEASUREMENT_ID": "G-W2J6MW7NWL"
+    "FIREBASE_MEASUREMENT_ID": "G-W2J6MW7NWL",
+    "VITE_FIREBASE_API_KEY": "AIzaSyAI_StR3wQSNcEZb78eFrVdz5HoGaXgcHg",
+    "VITE_FIREBASE_AUTH_DOMAIN": "fitspark-2.firebaseapp.com",
+    "VITE_FIREBASE_PROJECT_ID": "fitspark-2",
+    "VITE_FIREBASE_STORAGE_BUCKET": "fitspark-2.firebasestorage.app",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "996004291289",
+    "VITE_FIREBASE_APP_ID": "1:996004291289:web:dad5a0de6b0c1eff1e54c8",
+    "VITE_FIREBASE_MEASUREMENT_ID": "G-W2J6MW7NWL"
   }
 }
