Fix Vercel build: add build:production to shared package and fix turbo dependencies

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:staging": "pnpm build",
+    "build:production": "pnpm build",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "echo 'No linting for shared package yet'",
