--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "turbo run build:production --filter=@fitspark/web && cp -r apps/web/dist dist",
+  "_comment": "v2: added turbo build:production dependency fixes",
+  "buildCommand": "pnpm turbo run build:production --filter=@fitspark/web && cp -r apps/web/dist dist",
   "outputDirectory": "dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "routes": [
