--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "pnpm --filter @fitspark/shared run build && tsc -b && vite build --mode production",
-    "build:staging": "tsc -b && vite build --mode staging",
-    "build:production": "tsc -b && vite build --mode production",
+    "build:staging": "pnpm --filter @fitspark/shared run build && tsc -b && vite build --mode staging",
+    "build:production": "pnpm --filter @fitspark/shared run build && tsc -b && vite build --mode production",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "preview": "vite preview",
