fix(build): ensure dependencies are built and add TS project references

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
+    "declarationMap": true,
+    "composite": true,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
