--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,20 @@
 {
   "name": "fitspark-api",
   "version": "1.0.0",
-  "description": "Serverless API functions for FitSpark team competition",
+  "description": "Backend API server for FitSpark team competition",
   "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
     "firebase": "^10.7.1",
     "googleapis": "^128.0.0",
-    "google-auth-library": "^9.4.1"
+    "google-auth-library": "^9.4.1",
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": ">=18"
