frontend firebase backend render

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,5 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - 'apps/*'
+  - 'api'      # This line must match your folder name exactly
+  - 'packages/*'
+  - 'functions'
