--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build shared package
-        run: pnpm exec turbo run build --filter=@fitspark/shared
+      - name: Build all packages
+        run: pnpm exec turbo run build
 
       - name: Lint code
         run: pnpm exec turbo run lint
